--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,6 @@ email: "captainhindsight@inforekt.fail"
 description: "Got Rekt? Probably an OpSec fail."
 github_username:  "InfoRekt"
 
-url: "http://192.168.1.15:4000"
-#url: "http://inforekt.github.io"
+#url: "http://192.168.1.15:4000"
+url: "https://inforekt.github.io"
 
