--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,5 @@ description: "Got Rekt? Probably an OpSec fail."
 github_username:  "InfoRekt"
 
 #url: "http://127.0.0.1:4000"
-url: "http://inforekt.github.io"
+url: "https://inforekt.github.io"
 
