--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,4 @@ email: "captainhindsight@inforekt.fail"
 description: "Got Rekt? Probably an OpSec fail."
 github_username:  "InfoRekt"
 
-#url: "http://127.0.0.1:4000"
-url: "https://inforekt.github.io"
-
+url: "https://inforekt.fail"
